<resources>
    <string name="locale">en</string>
    <string name="app_name">Hot Portraits</string>
    <string name="reglogin_title">Login (SINA Weibo)</string>
    <string name="label_username">Username:</string>
    <string name="label_password">Password:</string>
    <string name="label_repeat">Repeat:</string>
    <string name="label_login">Listed &amp; Login</string>
    <string name="label_guest">As a guest</string>
    <string name="label_register">Register</string>
    <string name="label_remember">Remember Me</string>
    <string name="item_upload">Upload…</string>
    <string name="msg_loading">Loading…</string>
    <string name="tips_loading">Loading, please wait a second…</string>
    <string name="choose_title">Please pick a list from below:</string>
    <string name="quit_title">Are you sure to quit?</string>
    <string name="label_yes">Yes</string>
    <string name="label_no">No</string>
    <string name="err_needlogin">Please login to upload your picture.</string>
    <string name="err_needaccount">Please enter username &amp; password.</string>
    <string name="err_needrepeat">Please repeat your password.</string>
    <string name="err_nopath">Failed to locate path \&quot;%1$s\&quot;.</string>
    <string name="err_filealreadyexists">Picture \&quot;%1$s\&quot; is already there on your SDCARD.\nAre you sure to overwrite it?</string>
    <string name="label_ok">OK</string>
    <string name="label_cancel">Cancel</string>
    <string name="label_close">Close</string>
    <string name="err_sdcardnotmounted">SDCARD is not mounted, please mount it and try again.</string>
    <string name="tips_pages">%1$d~%2$d / Total %3$d pictures</string>
    <string name="err_nopictures">No pictures available</string>
    <string name="msg_nopictures">It appears that either there is no Internet connection, or our server is down. We apologize for any inconvenience. Please check back later!</string>
    <string name="err_noconnection">It appears that either there is no Internet connection, or our server is down. We apologize for any inconvenience. Please check back later!</string>
    <string name="msg_uploading">Uploading…</string>
    <string name="tips_voting">Voting…</string>
    <string name="err_voted">You\'ve %1$sd this one once before.(You could only vote once in %2$d hours.)</string>
    <string name="err_logintosave">Please login to save.</string>
    <string name="tips_nopictures">No pictures.</string>
    <string name="tips_playing">Playing…</string>
    <string name="info_picture">I\'m:%1$s\nI\'m at:%2$s\nI said:%3$s</string>
    <string name="tips_clicks">clicks: %1$d</string>
    <string name="tips_lastone">We\'re going to the first one.</string>
    <string name="tips_firstone">We\'re going to the last one.</string>
    <string name="tips_imagesaved">Image saved.</string>
    <string name="tips_nothingtosave">Nothing to save.</string>
    <string name="tips_imagenotsaved">Image not saved.</string>
    <string name="tips_filenotcreated">Failed to create file.</string>
    <string name="tips_saving">Saving…</string>
    <string name="tips_nothinghappened">Nothing happened.</string>
    <string name="label_letmelogin">Let me login now</string>
    <string name="label_letmebe">Let me be</string>
    <string name="omenuitem_upload">Upload</string>
    <string name="omenuitem_topic">Topic</string>
    <string name="omenuitem_reglogin">Login</string>
    <string name="omenuitem_quit">Quit</string>
    <string name="label_letmereg">I don\'t have an account, let me register.</string>
    <string name="label_letmelogon">I have an account, let me login.</string>
    <string name="label_reset">Reset</string>
    <string name="label_zoom">Do zoom</string>
    <string name="label_browse">Do browse</string>
    <string name="update_title">Program update</string>
    <string name="tips_update">Current version is %1$s, and a new version %2$s is found, please update it!</string>
    <string name="tips_connecting">Connecting…</string>
    <string name="tips_downloading">Downloading…</string>
    <string name="err_nofilesize">Unable to get size of the file.</string>
    <string name="err_noinputstream">Unable to get input stream.</string>
    <string name="tips_isdownloading">It\'s downloading now, please hold on a minute.</string>
    <string name="err_noversion">Failed to get local version, update aborted.</string>
    <string name="tips_alreadylast">It\'s already the latest version.</string>
    <string name="err_wrongversioninfos">Wrong version informations from server.</string>
    <string name="err_noversioninfos">Can\'t get version informations from server.</string>
    <string name="tips_loggedin">Logged in.</string>
    <string name="tips_loginfailed">Oooops, login failed.\nPlease check your input or the Internet connection and try again…</string>
    <string name="tips_alreadyloggedin">You\'ve logged in already.</string>
    <string name="intro_title">Intro</string>
    <string name="tips_enterintro">Enter you introductions or leave it blank below.</string>
    <string name="tips_voterating">Like rating:%1$d%%/%2$d voted</string>
    <string name="label_upup">like</string>
    <string name="label_dwdw">dislike</string>
    <string name="err_failedtoconfirmserial">Failed to confirm binding.</string>
    <string name="err_failedtogetserial">Failed to bind.</string>
    <string name="tips_succeededtogetserial">Bound.</string>
    <string name="tips_notgetserialyet">Not bound yet, please try again.</string>
    <string name="title_warning">Warning</string>
    <string name="label_refresh">Refresh</string>
    <string name="tips_howtobacktobrowse">BACK or DOUBLE TAP THE SCREEN to browse mode again.</string>
    <string name="tips_uploaded">Picture uploaded.</string>
    <string name="err_uploadfailed">Not uploaded. Please check if your INTERNET connection is stable or not.</string>
    <string name="label_save">Save</string>
    <string name="label_upload">Upload</string>
    <string name="label_play">Play</string>
    <string name="label_pause">Pause</string>
    <string name="label_pre">Prev</string>
    <string name="label_next">Next</string>
    <string name="label_random">Random</string>
    <string name="label_latest">Latest</string>
    <string name="label_hottest">Hottest</string>
    <string name="label_unhottest">Unhottest</string>
    <string name="tips_noadultstuff">It\'s not allowed to upload picture about adult stuff.</string>
    <string name="tips_hottesttheweek">Hottests the week.</string>
    <string name="tips_thelatest">Latest ones.</string>
    <string name="tips_possessions">My possessions.</string>
    <string name="tips_therandom">Randomly.</string>
    <string name="sharing_content">You could download it from here: </string>
    <string name="sharing_title">I found a hot application, wish you like it.</string>
    <string name="about_version">Version: </string>
    <string name="omenuitem_about">About</string>
    <string name="about_officialsite">Official site: </string>
    <string name="about_content">Thanks for using our program. It\'s our pleasure to recieve any opinions or suggestions to make it better.</string>
    <string name="about_contact">Please contact us: </string>
    <string name="title_loginfirst">You have to login to do this, please.</string>
    <string name="tips_havetologin">Please login first, thanks.</string>
    <string name="label_reload">Reload</string>
    <string name="label_weibo_friendship">Friend</string>
    <string name="label_weibo_favorite">Make favorite</string>
    <string name="label_weibo_repost">Repost</string>
    <string name="label_share">Share</string>
    <string name="tips_friendsmade">Friends made.</string>
    <string name="tips_friendsalready">Friends already.</string>
    <string name="label_microblogs">Miniblogs</string>
    <string name="label_weibos">Microblogs</string>
    <string name="label_favorites">Favorites</string>
    <string name="label_followers">Followers</string>
    <string name="label_friends">Friends</string>
    <string name="label_source">Source</string>
    <string name="label_justnow">Just now</string>
    <string name="label_minutesago">%1$d minutes ago</string>
    <string name="label_hoursago">%1$d hours ago</string>
    <string name="label_daysago">%1$d days ago</string>
    <string name="label_bigger_pic">Bigger image</string>
    <string name="title_youwanna">You wanna</string>
    <string name="label_more">More</string>
    <string name="label_comment">Comment</string>
    <string name="label_comments">Check comments</string>
    <string name="tips_favoritemade">Favorite made.</string>
    <string name="tips_favoritefailed">Failed to make favorite.</string>
    <string name="tips_favoritealready">Favorited.</string>
    <string name="tips_reposted">Reposted.</string>
    <string name="tips_repostfailed">Failed to repost.</string>
    <string name="tips_repostrepeated">Dont\'t repeat reposting, please.</string>
    <string name="tips_nocomments">No comments at all at the moment.</string>
    <string name="tips_commentsgetfailed">Failed to get comments.</string>
    <string name="tips_alreadylastone">Already the last one.</string>
    <string name="tips_noitemselected">No item selected.</string>
    <string name="tips_commented">Commented.</string>
    <string name="tips_commentfailed">Failed to comment.</string>
    <string name="tips_commentrepeated">Don\'t repeat commenting, please.</string>
    <string name="title_repost">You could put some words here or just leave it blank.</string>
    <string name="title_comment">Please put your comment below.</string>
    <string name="tips_waitasecond">Loading, please wait a second…</string>
    <string name="label_getmore">Click to get more…</string>
    <string name="tips_nomorecomments">No more comments.</string>
    <string name="label_addaccount">Add another account…</string>
    <string name="label_possess">Possess</string>
    <string name="label_possessions">Possessions</string>
    <string name="tips_possessed">Possessed.</string>
    <string name="tips_failedtopossess">Failed to possess.</string>
    <string name="tips_alreadypossessed">Already possessed before.</string>
    <string name="tips_confirmdelaccount">Are you sure to remove the account?</string>
    <string name="tips_confirmdelpossession">Are you sure to remove the possession?</string>
    <string name="tips_possessionremoved">Possession removed.</string>
    <string name="tips_possessioncanceling">Trying to cancel it, please wait a second…</string>
    <string name="tips_associated">Associated, and your possessions before were just merged.</string>
    <string name="label_logging">Logging, please wait a second…</string>
    <string name="label_default">Default</string>
    <string name="tips_whetherprofileimagecouldbeusedornot">We will put your public profile image out there and let people could +1/-1 to it, would you allow that?</string>
    <string name="label_allright">That\'s all right.</string>
    <string name="label_letmethink">Let me think.</string>
    <string name="title_attention">Attention, please</string>
    <string name="tips_getweiboinfofailed">Failed for some reason, please try again.</string>
    <string name="tips_nowisloggingin">In the middle of logging in, please do it after it\'s done.</string>
    <string name="label_accountdeltips">(Long click to try to remove an account from the list.)</string>
    <string name="tips_statusupdating">Status posting, please wait a moment…</string>
    <string name="tips_statusupdated">A new status successfully posted.</string>
    <string name="tips_statusupdatefailed">Failed to update a status.</string>
    <string name="tips_statusupdaterepeated">Don\'t repeat updating status, please.</string>
    <string name="label_atsomeone"> \@</string>
    <string name="label_her">her</string>
    <string name="label_him">him</string>
</resources>