<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent" android:id="@+id/flBackground">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_gravity="center"
        android:gravity="fill_horizontal|center">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" android:layout_margin="50dp">

            <com.sonyericsson.zoom.ImageZoomView
                android:id="@+id/imageSwitcher"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:longClickable="true"/>

        </LinearLayout>

    </LinearLayout>    
	<RelativeLayout android:layout_height="fill_parent" android:layout_width="fill_parent" android:longClickable="true" android:id="@+id/rlControl">
        <RelativeLayout android:layout_width="wrap_content" android:layout_height="fill_parent" android:id="@+id/relativeLayoutZoom">
            <LinearLayout android:orientation="vertical" android:id="@+id/linearLayoutInfo" android:layout_height="wrap_content" android:layout_width="wrap_content" android:layout_marginLeft="3dp" android:layout_alignParentBottom="true" android:layout_marginBottom="39dp">
                <ImageButton android:layout_height="42dp" android:background="#00000000" android:src="@drawable/zoomin" android:visibility="gone" android:scaleType="fitXY" android:layout_width="42dp" android:id="@+id/btnZoomin" android:contentDescription="zoom in"></ImageButton>
                <ImageButton android:layout_height="42dp" android:background="#00000000" android:src="@drawable/zoomout" android:visibility="gone" android:scaleType="fitXY" android:layout_width="42dp" android:id="@+id/btnZoomout" android:contentDescription="zoom out"></ImageButton>
            </LinearLayout>
        </RelativeLayout>
        <LinearLayout android:id="@+id/llBrowTop" android:layout_width="fill_parent" android:gravity="center" android:layout_height="wrap_content" android:orientation="vertical">
            <LinearLayout android:id="@+id/llOperate" android:gravity="right" android:layout_height="wrap_content" android:layout_width="fill_parent" android:visibility="gone">

                <Button android:layout_marginRight="1dp" android:layout_marginTop="1dp" android:textColor="#1da7ef" android:layout_marginLeft="6dp" android:layout_height="wrap_content" android:textSize="12sp" android:text="@string/label_save" android:layout_width="wrap_content" android:background="@drawable/btn_custom" android:id="@+id/btnSave" android:layout_marginBottom="1dp" android:paddingBottom="6dp" android:paddingTop="6dp" android:paddingLeft="6dp" android:paddingRight="6dp"></Button>
                <Button android:layout_marginRight="6dp" android:layout_marginTop="1dp" android:textColor="#1da7ef" android:layout_marginLeft="6dp" android:layout_height="wrap_content" android:textSize="12sp" android:text="@string/label_upload" android:layout_width="wrap_content" android:background="@drawable/btn_custom" android:visibility="gone" android:id="@+id/btnUpload" android:layout_marginBottom="1dp" android:paddingBottom="6dp" android:paddingTop="6dp" android:paddingLeft="6dp" android:paddingRight="6dp"></Button>
                <Button android:layout_marginRight="6dp" android:layout_marginTop="1dp" android:textColor="#1da7ef" android:layout_marginLeft="1dp" android:layout_height="wrap_content" android:textSize="12sp" android:text="@string/label_play" android:layout_width="wrap_content" android:background="@drawable/btn_custom" android:id="@+id/btnPlay" android:layout_marginBottom="1dp" android:paddingTop="6dp" android:paddingBottom="6dp" android:paddingLeft="6dp" android:paddingRight="6dp"></Button>
                <Button android:layout_marginRight="6dp" android:layout_marginTop="1dp" android:textColor="#1da7ef" android:layout_marginLeft="1dp" android:layout_height="wrap_content" android:textSize="12sp" android:text="@string/label_pause" android:layout_width="wrap_content" android:background="@drawable/btn_custom" android:visibility="gone" android:id="@+id/btnPause" android:layout_marginBottom="1dp" android:paddingBottom="6dp" android:paddingTop="6dp" android:paddingLeft="6dp" android:paddingRight="6dp"></Button>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout android:layout_width="fill_parent" android:id="@+id/linearLayoutBottom" android:orientation="vertical" android:layout_height="wrap_content" android:layout_alignParentTop="true">
            <RelativeLayout android:layout_width="fill_parent" android:layout_height="wrap_content">
                <LinearLayout android:layout_height="wrap_content" android:layout_centerInParent="true" android:layout_width="fill_parent">
                    <Button android:layout_width="wrap_content" android:background="#00000000" android:layout_weight="25" android:id="@+id/btnPossess" android:textSize="12sp" android:layout_height="wrap_content" android:text="@string/label_possess" android:textColor="#f85c08" android:paddingTop="9dp" android:paddingBottom="9dp"></Button>
                    <Button android:id="@+id/btnShare" android:text="@string/label_share" android:layout_height="wrap_content" android:textSize="12sp" android:layout_width="wrap_content" android:background="#00000000" android:layout_weight="25" android:textColor="#f85c08" android:paddingBottom="9dp" android:paddingTop="9dp"></Button>

                    <Button
                        android:id="@+id/btnAtSomeoneBrow"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="25"
                        android:background="#00000000"
                        android:text="@string/label_atsomeone" android:textColor="#1da7ef" android:paddingBottom="9dp" android:paddingTop="9dp" android:textSize="12sp"/>

                    <Button android:layout_width="wrap_content" android:textSize="12sp" android:layout_height="wrap_content" android:id="@+id/btnMakeFriendsFromBrow" android:text="@string/label_weibo_friendship" android:background="#00000000" android:textColor="#1da7ef" android:layout_weight="25" android:paddingTop="9dp" android:paddingBottom="9dp"></Button>
                    <Button android:layout_width="wrap_content" android:textSize="12sp" android:layout_height="wrap_content" android:id="@+id/btnWeiboShow" android:background="#00000000" android:text="@string/label_microblogs" android:textColor="#1da7ef" android:layout_weight="25" android:paddingBottom="9dp" android:paddingTop="9dp"></Button>
                </LinearLayout>
            </RelativeLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/textViewNums"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="#00000000"
            android:gravity="center"
            android:paddingBottom="3dp"
            android:paddingTop="3dp"
            android:text="n/Totals" android:layout_alignParentBottom="true" android:layout_marginBottom="80dp"/>

        <TextView
            android:id="@+id/tvScreenNameAbovePic"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/brow_screen_name"
            android:paddingLeft="28dp"
            android:paddingRight="24dp"
            android:layout_marginTop="29dp" android:layout_centerHorizontal="true" android:textSize="13sp" android:textColor="#ffff99" android:text="..."/>

        <ImageView
            android:id="@+id/imgVerified_brow"
            android:layout_width="23dp"
            android:layout_height="25dp"
            android:scaleType="fitXY"
            android:src="@drawable/weibo_verified" android:layout_marginTop="32dp" android:layout_marginLeft="8dp"/>

    </RelativeLayout>
</FrameLayout>
