<?xml version="1.0" encoding="utf-8"?>
<LinearLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
    
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/label_home" android:textStyle="bold" android:layout_centerVertical="true"/>

        <ImageButton
            android:id="@+id/btnHomeMore"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:src="@drawable/more" android:background="#00000000" android:scaleType="fitXY" android:layout_centerVertical="true" android:layout_alignParentRight="true"/>

    </RelativeLayout>
    
    <FrameLayout 
        android:layout_width="fill_parent" 
        android:layout_height="fill_parent" 
        android:id="@+id/frameLayoutMain">

        <com.zrd.zr.customctrls.ZRScrollView
            android:id="@+id/svMain"
            android:layout_width="fill_parent"
		    android:layout_height="fill_parent"
            android:layout_marginBottom="46dp"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:baselineAligned="false" >
		        
                <LinearLayout
		            android:id="@+id/llLeft"
		            android:layout_height="wrap_content"
		            android:layout_width="fill_parent"
		            android:layout_weight="33"
		            android:orientation="vertical" >
		        </LinearLayout>
		        
                <LinearLayout
                    android:id="@+id/llMid"
                    android:layout_height="wrap_content"
                    android:layout_width="fill_parent"
                    android:layout_weight="33"
                    android:orientation="vertical" >
                </LinearLayout>
                
                <LinearLayout
                    android:id="@+id/llRight"
                    android:layout_height="wrap_content"
                    android:layout_width="fill_parent"
                    android:layout_weight="33"
                    android:orientation="vertical" >
                </LinearLayout>
                
            </LinearLayout>
        </com.zrd.zr.customctrls.ZRScrollView>
        <RelativeLayout android:layout_width="fill_parent" android:id="@+id/relativeLayoutMain" android:layout_height="wrap_content">
            <LinearLayout 
                android:layout_width="fill_parent" 
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_alignParentBottom="true" android:id="@+id/linearLayoutMainBottom" android:gravity="center">

                <TextView
                    android:id="@+id/tvMsgMain"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:textSize="11sp"/>

                <RelativeLayout android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_gravity="center" android:gravity="center">
                    <LinearLayout android:layout_height="wrap_content" android:id="@+id/linearLayout1" android:layout_width="fill_parent" android:layout_centerHorizontal="true" android:layout_centerInParent="true" android:layout_centerVertical="true" android:gravity="center">
                        <Button android:text="@string/label_random" android:textSize="12sp" android:background="@drawable/btn_custom" android:layout_height="wrap_content" android:id="@+id/btnRandom" android:textColor="#1da7ef" android:lines="1" android:layout_width="wrap_content" android:layout_weight="17.5" android:paddingBottom="9dp" android:paddingTop="9dp"></Button>
                        <Button android:text="@string/label_latest" android:id="@+id/btnLatest" android:textSize="12sp" android:background="@drawable/btn_custom" android:layout_height="wrap_content" android:textColor="#1da7ef" android:lines="1" android:layout_width="wrap_content" android:layout_weight="17.5" android:paddingBottom="9dp" android:paddingTop="9dp"></Button>
                        <Button android:text="@string/label_hottest" android:id="@+id/btnHottest" android:textSize="12sp" android:background="@drawable/btn_custom" android:layout_height="wrap_content" android:textColor="#1da7ef" android:lines="1" android:layout_width="wrap_content" android:layout_weight="17.5" android:paddingBottom="9dp" android:paddingTop="9dp"></Button>
                        <Button android:background="@drawable/btn_custom" android:layout_width="wrap_content" android:textColor="#1da7ef" android:layout_height="wrap_content" android:textSize="12sp" android:id="@+id/btnUnhottest" android:text="@string/label_unhottest" android:lines="1" android:layout_weight="17.5" android:paddingTop="9dp" android:paddingBottom="9dp" android:visibility="gone"></Button>
                        <Button android:layout_width="wrap_content" android:lines="1" android:background="@drawable/btn_custom" android:layout_weight="30" android:id="@+id/btnPossessions" android:textSize="12sp" android:layout_height="wrap_content" android:text="@string/label_possessions" android:textColor="#f85c08" android:paddingBottom="9dp" android:paddingTop="9dp"></Button>
                    </LinearLayout>
                </RelativeLayout>

            </LinearLayout>

            <TextView
                android:id="@+id/tvNoConnectionTip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:text="@string/err_noconnection" android:layout_marginLeft="10dp" android:layout_marginRight="10dp" android:gravity="center" android:paddingBottom="48dp"/>

        </RelativeLayout>
    </FrameLayout>

</LinearLayout>